# emscripten-stdio

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
web/: index.html  logic.js
